--- a/platforms/android/app/src/main/assets/www/css/style.css
+++ b/platforms/android/app/src/main/assets/www/css/style.css
@@ -33,6 +33,12 @@ html,body{
     margin-top:20px;
     margin-left: 65px;
     margin-right: 65px;
+    
+  }
+  #qrcode1 {
+    margin-top:20px;
+    margin-left: 65px;
+    margin-right: 65px;
   }
   
   input{
